set back activity log messages in scanlink and scanassign

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -305,14 +305,12 @@ ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}\: Cannot assign posi
 ScanAssign.activitylog.aliquot.moved=MOVED in {0}\: specimen {1} registered on another position\: {2}
 ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}\: specimen {1} registered in another site\: {2} in position\: {3}
 ScanAssign.activitylog.aliquot.typeError=ERROR in {0}\: this pallet type {1} can''t hold a specimen of type {2}
-ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to specimen \
-{2} - Type\: {3} - Patient\: {4} - Visit#\: {5}\n
+ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to specimen {2} - Type\: {3} - Patient\: {4} - Visit\#\: {5}\n
 ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} specimens added to pallet {1} of site {2}
 ScanAssign.okMessage=Assigning specimens location.
-ScanLink.activitylog.aliquot.existsError=ERROR in {0}\: Specimen {1} already in database linked to visit {2} of patient {3} (done by site {4})
-ScanLink.activitylog.aliquot.linked=LINKED\: {0} - patient\: {1} - site\: {2} - \
-Visit\: {3} - {4} - {5}\n
-ScanLink.activitylog.save.summary=SCAN-LINK\: {0} specimens linked to patient {1} on site {2} for visit drawn on {3} (processed on {4})
+ScanLink.activitylog.aliquot.existsError=ERROR in {0}\: Specimen {1} already in database linked to visit {2} of patient {3} (currently in centre site {4})
+ScanLink.activitylog.aliquot.linked=LINKED\: {0} - Type: {1} - Patient\: {2} - Visit\: {3} - Centre: {4} \n
+ScanLink.activitylog.save.summary=SCAN-LINK\: {0} specimens linked to patient {1} on centre {2}
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
 Cabinet.activitylog.checkingPosition=Checking position {0}
 Cabinet.activitylog.checkPosition.error=ERROR: Position {0} already in use in container {1}
