--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -320,8 +320,10 @@ Cabinet.activitylog.checkParent.error.found=Can''t find bin labelled {0} in site
 Cabinet.activitylog.checkParent.error=ERROR: {0}
 Cabinet.activitylog.gettingInfoId=Getting informations for inventoryID {0}
 Cabinet.activitylog.aliquotInfo=Specimen {0}: current position={1}
-Cabinet.activitylog.aliquot.saveNew=LINKED/ASSIGNED\: position {0} to specimen {1} - Type\: {2} - Patient\: {3} - Visit\: {4}-{5}
-Cabinet.activitylog.aliquot.saveMove=ASSIGNED\: position {0} to specimen {1} - Type\: {2} - Patient\: {3} - Visit\: {4}-{5}
+Cabinet.activitylog.aliquot.saveNew=LINKED/ASSIGNED\: position {0} to specimen {1} \
+in centre {2} - Type\: {3} - Patient\: {4} - Visit\: {5}
+Cabinet.activitylog.aliquot.saveMove=ASSIGNED\: position {0} to specimen {1} \
+in centre {2} - Type\: {3} - Patient\: {4} - Visit\: {5}
 
 #Scan Link
 ScanLink.scanStatus.aliquot.alreadyExists=Specimen already in database
@@ -380,12 +382,16 @@ Cabinet.old.position.check.label=Old position check
 Cabinet.position.label=Position
 Cabinet.new.position.label=New position
 Cabinet.position.validationMsg=Enter a position
+Cabinet.sourceSpecimen.label=Source specimen
 Cabinet.sampleType.label=Specimen type
 Cabinet.sampleType.validationMsg=A specimen type should be selected
 Cabinet.tabTitle=Cabinet Link/Assign
 Cabinet.visit.label=Collection event
 Cabinet.visit.validationMsg=A collection event should be selected
 Cabinet.checkStatus.error=Position {0} already in use in container {1}
+Cabinet.specimentype.error.title=No specimen types
+Cabinet.specimentype.error.msg=There are no specimen types that are defined for \
+current patient study ({0}) and that are defined as possible for bin {1}
 
 #Decode Plate
 DecodePlate.tabTitle=Decode Plate
