add processing event forms

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -190,6 +190,8 @@ CollectionEventViewForm.title=Visit {0}
 CollectionEventViewForm.main.title=Collection Event for visit {0}
 CollectionEventViewForm.specimens.title=Source Specimens
 
+#ProcessingEvent Forms and tables
+ProcessingEventViewForm.title=Processing event for date {0}
 
 # SourceSpecimen table and dialog
 SourceSpecimenEntryInfoTable.delete.title=Delete source specimen
@@ -309,7 +311,7 @@ ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to spec
 ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} specimens added to pallet {1} of site {2}
 ScanAssign.okMessage=Assigning specimens location.
 ScanLink.activitylog.aliquot.existsError=ERROR in {0}\: Specimen {1} already in database linked to visit {2} of patient {3} (currently in centre site {4})
-ScanLink.activitylog.aliquot.linked=LINKED\: {0} - Type: {1} - Patient\: {2} - Visit\: {3} - Centre: {4} \n
+ScanLink.activitylog.aliquot.linked=LINKED\: {0} - Type\: {1} - Patient\: {2} - Visit\: {3} - Centre\: {4} \n
 ScanLink.activitylog.save.summary=SCAN-LINK\: {0} specimens linked to patient {1} on centre {2}
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
 Cabinet.activitylog.checkingPosition=Checking position {0}
