adding, editing.deleting processing event is working

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -192,6 +192,21 @@ CollectionEventViewForm.specimens.title=Source Specimens
 
 #ProcessingEvent Forms and tables
 ProcessingEventViewForm.title=Processing event for date {0}
+ProcessingEventViewForm.specimens.title=Source specimens
+ProcessingEventEntryForm.title.new=New processing event
+ProcessingEventEntryForm.creation.msg=Creating a new processing event
+ProcessingEventEntryForm.edition.msg=Editing a processing event
+ProcessingEventEntryForm.title.edit.worksheet=Processing event {0} on {1}
+ProcessingEventEntryForm.title.edit.noworksheet=Processing event date {0}
+ProcessingEventEntryForm.main.title=Processing event information
+ProcessingEvent.field.centre.label=Centre
+ProcessingEvent.field.date.label=Creation date
+ProcessingEventEntryForm.field.date.validation.msg=A creation date/time should be selected
+ProcessingEvent.field.worksheet.label=Worksheet
+ProcessingEventEntryForm.field.activity.validation.msg=Processing event must have an activity status 
+ProcessingEventEntryForm.specimens.title=Source specimens
+ProvessingEventAdapter.tooltiptext=Processing event on date {0}
+ProcessingEventAdapter.deleteMsg=Are you sure you want to delete this processing event ?
 
 # SourceSpecimen table and dialog
 SourceSpecimenEntryInfoTable.delete.title=Delete source specimen
