small updates to the uml file + rename all 'centre' to 'center' + improve a little the collectionEvent form

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -12,18 +12,18 @@ LoginDialog.field.user.error.title=Invalid User Name
 LoginDialog.field.user.error.msg=User Name field must not be blank.
 LoginDialog.field.password.validaton.msg=Password field cannot be empty
 LoginDialog.field.password.label=&Password
-LoginDialog.working.center.error.title=Problem getting user working centres
-LoginDialog.no.working.center.error.msg=No working centre has been found for this user. \
+LoginDialog.working.center.error.title=Problem getting user working centers
+LoginDialog.no.working.center.error.msg=No working center has been found for this user. \
 Check with your manager or application administrator for user rights.
 LoginDialog.working.center.admin.title=Super administrator mode
-LoginDialog.no.working.center.admin.msg=No working centre has been found or selected for this user. You are super administrator, so you will be log on with no working centre. Only no centre specific actions will be available. 
-LoginDialog.working.center.selection.error.title=Working centre selection
-LoginDialog.working.center.selection.error.msg=You need to select the centre you want to work with.
+LoginDialog.no.working.center.admin.msg=No working center has been found or selected for this user. You are super administrator, so you will be log on with no working center. Only no center specific actions will be available. 
+LoginDialog.working.center.selection.error.title=Working center selection
+LoginDialog.working.center.selection.error.msg=You need to select the center you want to work with.
 LoginDialog.user.error.title=Invalid User Name
 
 # WorkingCenterSelectDialog
-WorkingCenterSelectDialog.title=Working centre selection
-WorkingCenterSelectDialog.description=You have more than one working centre\: choose the one you will work with.
+WorkingCenterSelectDialog.title=Working center selection
+WorkingCenterSelectDialog.description=You have more than one working center\: choose the one you will work with.
 
 
 # Common labels and validation messages
@@ -189,6 +189,8 @@ CollectionEventEntryForm.specimenstypes.error.msg=Error retrieving source vessel
 CollectionEventViewForm.title=Visit {0}
 CollectionEventViewForm.main.title=Collection Event for visit {0}
 CollectionEventViewForm.specimens.title=Source Specimens
+CollectionEventEntryForm.timeDrawn.label=Time drawn to use on new specimens
+CollectionEventEntryForm.field.activity.validation.msg=Patient visit must have an activity status
 
 #ProcessingEvent Forms and tables
 ProcessingEventViewForm.title=Processing event for date {0}
@@ -199,7 +201,7 @@ ProcessingEventEntryForm.edition.msg=Editing a processing event
 ProcessingEventEntryForm.title.edit.worksheet=Processing event {0} on {1}
 ProcessingEventEntryForm.title.edit.noworksheet=Processing event date {0}
 ProcessingEventEntryForm.main.title=Processing event information
-ProcessingEvent.field.centre.label=Centre
+ProcessingEvent.field.center.label=Center
 ProcessingEvent.field.date.label=Creation date
 ProcessingEventEntryForm.field.date.validation.msg=A creation date/time should be selected
 ProcessingEvent.field.worksheet.label=Worksheet
@@ -235,18 +237,21 @@ AliquotedSpecimen.field.quantity.label=Quantity
 AliquotedSpecimen.field.quantity.validation.msg=Quantity should be a whole number
 
 # Specimen dialog and table
-SpecimenDialog.title.add=Add specimen
-SpecimenDialog.title.edit=Edit specimen
-SpecimenDialog.msg.add=Add a specimen to a collection event
-SpecimenDialog.msg.edit=Edit a specimen in a collection event
-SpecimenDialog.field.type.label=Type
-SpecimenDialog.field.type.validation.msg=A specimen type should be selected
-SpecimenDialog.field.type.checkbox=Show only study source specimens
-SpecimenDialog.field.time.label=Time drawn
-SpecimenDialog.field.quantity.label=Quantity (ml)
-SpecimenDialog.field.quantity.validation.msg=Quantity is required.
+CEventSourceSpecimenDialog.title.add=Add specimen
+CEventSourceSpecimenDialog.title.edit=Edit specimen
+CEventSourceSpecimenDialog.msg.add=Add a specimen to a collection event
+CEventSourceSpecimenDialog.msg.edit=Edit a specimen in a collection event
+CEventSourceSpecimenDialog.field.type.label=Type
+CEventSourceSpecimenDialog.field.type.validation.msg=A specimen type should be selected
+CEventSourceSpecimenDialog.field.type.checkbox=Show only study source specimens
+CEventSourceSpecimenDialog.field.time.label=Time drawn
+CEventSourceSpecimenDialog.field.time.tooltip=If the study doesn't require a specific time drawn, \
+then the default time drawn is used
+CEventSourceSpecimenDialog.field.quantity.label=Quantity (ml)
+CEventSourceSpecimenDialog.field.quantity.validation.msg=Quantity is required.
 SpecimenEntryInfoTable.delete.title=Delete specimen
 SpecimenEntryInfoTable.delete.question=Are you sure you want to delete specimen "{0}"?
+
 
 # common to all LinkAssign forms
 linkAssign.plateToScan.label=Plate to scan
@@ -325,9 +330,10 @@ ScanAssign.activitylog.aliquot.typeError=ERROR in {0}\: this pallet type {1} can
 ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to specimen {2} - Type\: {3} - Patient\: {4} - Visit\#\: {5}\n
 ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} specimens added to pallet {1} of site {2}
 ScanAssign.okMessage=Assigning specimens location.
-ScanLink.activitylog.aliquot.existsError=ERROR in {0}\: Specimen {1} already in database linked to visit {2} of patient {3} (currently in centre site {4})
-ScanLink.activitylog.aliquot.linked=LINKED\: {0} - Type\: {1} - Patient\: {2} - Visit\: {3} - Centre\: {4} \n
-ScanLink.activitylog.save.summary=SCAN-LINK\: {0} specimens linked to patient {1} on centre {2}
+ScanLink.activitylog.aliquot.existsError=ERROR in {0}\: Specimen {1} already in \
+database linked to visit {2} of patient {3} (currently in center site {4})
+ScanLink.activitylog.aliquot.linked=LINKED\: {0} - Type\: {1} - Patient\: {2} - Visit\: {3} - Center\: {4} \n
+ScanLink.activitylog.save.summary=SCAN-LINK\: {0} specimens linked to patient {1} on center {2}
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
 Cabinet.activitylog.checkingPosition=Checking position {0}
 Cabinet.activitylog.checkPosition.error=ERROR: Position {0} already in use in container {1}
@@ -338,9 +344,9 @@ Cabinet.activitylog.checkParent.error=ERROR: {0}
 Cabinet.activitylog.gettingInfoId=Getting informations for inventoryID {0}
 Cabinet.activitylog.aliquotInfo=Specimen {0}: current position={1}
 Cabinet.activitylog.aliquot.saveNew=LINKED/ASSIGNED\: position {0} to specimen {1} \
-in centre {2} - Type\: {3} - Patient\: {4} - Visit\: {5}
+in center {2} - Type\: {3} - Patient\: {4} - Visit\: {5}
 Cabinet.activitylog.aliquot.saveMove=ASSIGNED\: position {0} to specimen {1} \
-in centre {2} - Type\: {3} - Patient\: {4} - Visit\: {5}
+in center {2} - Type\: {3} - Patient\: {4} - Visit\: {5}
 
 #Scan Link
 ScanLink.scanStatus.aliquot.alreadyExists=Specimen already in database
