--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -32,6 +32,7 @@ label.nameShort=Short name
 label.activity=Activity status
 validation.activity=An activity status should be selected
 label.comments=Comments
+infotable.loading.msg=loading...
 
 # Site Forms
 SiteViewForm.field.studyCount.label=Total Studies
@@ -189,7 +190,7 @@ CollectionEventEntryForm.specimenstypes.error.msg=Error retrieving source vessel
 CollectionEventViewForm.title=Visit {0}
 CollectionEventViewForm.main.title=Collection Event for visit {0}
 CollectionEventViewForm.specimens.title=Source Specimens
-CollectionEventEntryForm.timeDrawn.label=Time drawn to use on new specimens
+CollectionEventEntryForm.timeDrawn.label=Time drawn to use \non new specimens
 CollectionEventEntryForm.field.activity.validation.msg=Patient visit must have an activity status
 
 #ProcessingEvent Forms and tables
@@ -247,8 +248,12 @@ CEventSourceSpecimenDialog.field.type.checkbox=Show only study source specimens
 CEventSourceSpecimenDialog.field.time.label=Time drawn
 CEventSourceSpecimenDialog.field.time.tooltip=If the study doesn't require a specific time drawn, \
 then the default time drawn is used
+CEventSourceSpecimenDialog.field.time.validation.msg=Time drawn should be set
 CEventSourceSpecimenDialog.field.quantity.label=Quantity (ml)
 CEventSourceSpecimenDialog.field.quantity.validation.msg=Quantity is required.
+CEventSourceSpecimenDialog.activity.error.msg=Problem retrieving activity status
+CEventSourceSpecimenDialog.field.inventoryID.validator.msg=Inventory ID should be set
+CEventSourceSpecimenDialog.specimen.dialog.error.msg=Error opening dialog for new specimen
 SpecimenEntryInfoTable.delete.title=Delete specimen
 SpecimenEntryInfoTable.delete.question=Are you sure you want to delete specimen "{0}"?
 
