--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -189,7 +189,8 @@ CollectionEventEntryForm.specimens.add.title=Add specimens
 CollectionEventEntryForm.specimenstypes.error.msg=Error retrieving source vessels
 CollectionEventViewForm.title=Visit {0}
 CollectionEventViewForm.main.title=Collection Event for visit {0}
-CollectionEventViewForm.specimens.title=Source Specimens
+CollectionEventViewForm.sourcespecimens.title=Source specimens
+CollectionEventViewForm.aliquotedspecimens.title=Aliquoted specimens
 CollectionEventEntryForm.timeDrawn.label=Time drawn to use \non new specimens
 CollectionEventEntryForm.field.activity.validation.msg=Patient visit must have an activity status
 
@@ -306,7 +307,7 @@ ScanAssign.validation.error.title=Values validation
 linkAssign.activitylog.scanning=----SCAN on plate {0}----
 linkAssign.activitylog.rescanning=----RESCAN on plate {0}----
 linkAssign.activitylog.patient=Found patient with number {0}
-linkAssign.activitylog.visit.selection=Collection event selected on site {0}; Drawn\: {1}; Processed\: {2}; Clinic\: {3}
+linkAssign.activitylog.visit.selection=Visit number {0} selected
 linkAssign.activitylog.scanRes.total=Scan completed - {0} specimens found
 linkAssign.activitylog.scanTubeAlone=Tube {0} scanned and set to position {1}
 ScanAssign.activitylog.pallet.checkLabelForProductBarcode=Checking label position {0} \
