--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -1,4 +1,5 @@
 # Login dialog
+LoginDialog.main.title=BioBank Login
 LoginDialog.title=Login to a BioBank server
 LoginDialog.description=Enter server name and login details.
 LoginDialog.field.server.validation.msg=Server field cannot be empty
@@ -17,11 +18,13 @@ LoginDialog.no.working.center.error.msg=No working center has been found for thi
 Check with your manager or application administrator for user rights.
 LoginDialog.working.center.admin.title=Super administrator mode
 LoginDialog.no.working.center.admin.msg=No working center has been found or selected for this user. You are super administrator, so you will be log on with no working center. Only no center specific actions will be available. 
+LoginDialog.perspective.open.error.msg=Error while opening main perspective
 LoginDialog.working.center.selection.error.title=Working center selection
 LoginDialog.working.center.selection.error.msg=You need to select the center you want to work with.
 LoginDialog.user.error.title=Invalid User Name
 
 # WorkingCenterSelectDialog
+WorkingCenterSelectDialog.available.centers.label=Available centers
 WorkingCenterSelectDialog.title=Working center selection
 WorkingCenterSelectDialog.description=You have more than one working center\: choose the one you will work with.
 
@@ -46,6 +49,8 @@ SiteViewForm.type.add=Add Container Type
 SiteViewForm.topContainers.title=Top Level Containers
 SiteViewForm.topContainers.add=Add Container
 SiteViewForm.title=Repository Site {0}
+SiteViewForm.studies.title=Studies
+SiteViewForm.reload.error.msg=Can't reload site
 SiteEntryForm.creation.msg=Create a new BioBank site.
 SiteEntryForm.edition.msg=Edit a BioBank site.
 SiteEntryForm.title.new=New Repository Site
@@ -110,7 +115,24 @@ container.field.label.label=Label
 container.field.label.barcode=Product Bar Code
 container.field.label.type=Container Type
 container.field.label.temperature=Temperature
+ContainerViewForm.aliquots.title=Aliquots
 ContainerViewForm.title=Container {0} ({1})
+ContainerViewForm.visual.title=Container Visual
+ContainerViewForm.visualization.delete.error.msg=Can't Delete Containers
+ContainerViewForm.visualization.delete.monitor.msg=Deleting...
+ContainerViewForm.visualization.delete.select.label=Delete selected containers of type
+ContainerViewForm.visualization.delete.button.text=Delete
+ContainerViewForm.visualization.error.msg=Error in container children : can't display those initialized
+ContainerViewForm.visualization.all.label=All
+ContainerViewForm.visualization.init.button.text=Initialize
+ContainerViewForm.visualization.init.error.msg=Error while creating children
+ContainerViewForm.visualization.init.selection.label=Initialize selection to
+ContainerViewForm.vizualisation.delete.confirm.msg=Are you sure you want to delete these containers?
+ContainerViewForm.vizualisation.delete.confirm.title=Confirm Delete
+ContainerViewForm.vizualisation.init.monitor.msg=Initializing...
+ContainerViewForm.initCell.error.title=Positions errors
+ContainerViewForm.initCell.error.msg=Some child container has wrong position number
+ContainerViewForm.refresh.error.msg=Error loading
 
 #ContainerType Forms
 containerType.field.label.site=Repository Site
