add null test in getTooltipText methods (when loading is not finished, object could be null)

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -231,7 +231,8 @@ ProcessingEventEntryForm.field.date.validation.msg=A creation date/time should b
 ProcessingEvent.field.worksheet.label=Worksheet
 ProcessingEventEntryForm.field.activity.validation.msg=Processing event must have an activity status 
 ProcessingEventEntryForm.specimens.title=Source specimens
-ProvessingEventAdapter.tooltiptext=Processing event on date {0}
+ProvessingEventAdapter.tooltiptext=Processing event
+ProvessingEventAdapter.tooltiptext.withdate=Processing event on date {0}
 ProcessingEventAdapter.deleteMsg=Are you sure you want to delete this processing event ?
 
 # SourceSpecimen table and dialog
