fixed clinic view form

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -91,7 +91,7 @@ clinic.contact.title=Contacts
 ClinicViewForm.title=Clinic {0}
 ClinicViewForm.field.label.totalShipments=Total Shipments
 ClinicViewForm.field.label.totalPatients=Total Patients
-ClinicViewForm.field.label.totalPatientVisits=Total Patient Visits
+ClinicViewForm.field.label.totalCollectionEvents=Total Collection Events
 ClinicViewForm.studies.title=Studies
 ClinicViewForm.shipments.title=Shipments
 ClinicEntryForm.creation.msg=New clinic information.
