try the creation of a generic link form and a generic assign form... to be merge ???

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -392,7 +392,7 @@ ScanLink.rowChoice.label=Row choice
 ScanLink.sampleType.select.validationMsg=Give a type to each specimen
 ScanLink.scanError.validationMsg=Errors in scan \!
 ScanLink.tabTitle=Scan Link
-ScanLink.visit.label.drawn=Collection date drawn
+ScanLink.visit.number=Collection visit#
 ScanLink.visit.validationMsg=A collection event should be selected
 ScanLink.visit.label="Visit #{0} - Drawn {1}
 ScanLink.worksheet.label=Worksheet
