update security for centers

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -22,6 +22,7 @@ LoginDialog.perspective.open.error.msg=Error while opening main perspective
 LoginDialog.working.center.selection.error.title=Working center selection
 LoginDialog.working.center.selection.error.msg=You need to select the center you want to work with.
 LoginDialog.user.error.title=Invalid User Name
+LoginDialog.field.superAdmin=Connect in super administrator mode
 
 # WorkingCenterSelectDialog
 WorkingCenterSelectDialog.available.centers.label=Available centers
