New security based on centers is working

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -456,17 +456,19 @@ ScanPlate.dialog.scanError.title=Scan result error
 
 #GroupEditDialog
 GroupEditDialog.msg.error.name.used=This name is already used.
-GroupEditDialog.msg.error.retrieve.sites=Cannot retrieve sites list
+GroupEditDialog.msg.error.retrieve.centers=Cannot retrieve centers list
 GroupEditDialog.msg.name.required=A valid name is required.
 GroupEditDialog.msg.persit.error=Unable to Save Group
 GroupEditDialog.property.title.name=Name
-GroupEditDialog.site.administrator.title=Is Site administrator
-GroupEditDialog.site.list.available=Available sites
-GroupEditDialog.site.list.canUpdate=Can update sites
-GroupEditDialog.site.list.readonly=Read only sites
+GroupEditDialog.center.administrator.title=Is administrator of these working centers
+GroupEditDialog.center.administrator.tooltip=All center specific features are enabled when a group is site administrator
+GroupEditDialog.center.list.available=Available centers
+GroupEditDialog.center.list.working=Working centers
 GroupEditDialog.title.add=Add Group
 GroupEditDialog.title.edit=Edit Group
 GroupEditDialog.titlearea.add=Add a new group
 GroupEditDialog.titlearea.modify=Modify an existing group's information
-GroupEditDialog.feature.list.selected=Features enabled
-GroupEditDialog.feature.list.available=Features available
+GroupEditDialog.feature.center.list.available=Center specific features available
+GroupEditDialog.feature.center.list.selected=Center specific features enabled
+GroupEditDialog.feature.global.list.available=Global features available
+GroupEditDialog.feature.global.list.selected=Global features enabled
