resolves cabinet assign problem if more than one container match: will display a dialog to choose the correct one.

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/forms/messages.properties
@@ -59,23 +59,24 @@ ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}: Cannot assign posit
 ScanAssign.activitylog.aliquot.moved=MOVED in {0}: aliquot {1} registered on another position: {2}
 ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}: aliquot {1} registered in another site: {2} in position: {3}
 ScanAssign.activitylog.aliquot.typeError=ERROR in {0}: this pallet type {1} can''t hold an aliquot that contains a sample of type {2}
-ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} to aliquot {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}\n
+ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} to aliquot {1} - Type\: {2} - Patient\: {3} - Visit\: {4}-{5}\n
 ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} aliquots added to pallet {1}
 ScanAssign.okMessage=Assigning aliquots location.
 ScanLink.activitylog.aliquot.existsError=ERROR in {0}: Aliquot {1} already in database into visit {2} of patient {3}
-ScanLink.activitylog.aliquot.linked=LINKED: {0} - patient: {1} - Visit: {2} - {3} - {4}\n
+ScanLink.activitylog.aliquot.linked=LINKED\: {0} - patient\: {1} - Visit\: {2} - {3} - {4}\n
 ScanLink.activitylog.save.summary=SCAN-LINK: {0} aliquots linked to patient {1} for visit drawn on {2} (processed on {3})
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
 Cabinet.activitylog.checkingPosition=Checking position {0}
 Cabinet.activitylog.checkPosition.error=ERROR: Position {0} already in use in container {1}
 Cabinet.activitylog.checkingParent=Checking parent container{0} for type {1}
 Cabinet.activitylog.checkParent.error.type=Bin labelled {0} cannot hold aliquots that contain a sample of type {1}
-Cabinet.activitylog.checkParent.error.found=Can''t find bin labelled {0}
+Cabinet.activitylog.checkParent.error.found=Can''t find bin that will match these labels and aliquot labels: {0}
 Cabinet.activitylog.checkParent.error=ERROR: {0}
 Cabinet.activitylog.gettingInfoId=Getting informations for inventoryID {0}
 Cabinet.activitylog.aliquotInfo=Aliquot {0}: current position={1}
 Cabinet.activitylog.aliquot.saveNew=LINKED/ASSIGNED: position {0} to aliquot {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}
 Cabinet.activitylog.aliquot.saveMove=ASSIGNED: position {0} to aliquot {1} - Type: {2} - Patient: {3} - Visit: {4}-{5}
+Cabinet.activitylog.containers.init=Parent containers - cabinet: {0}; drawer: {1}; bin: {2}
 
 #Scan Link
 ScanLink.scanStatus.aliquot.alreadyExists=Aliquot already in database
