--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -210,7 +210,7 @@ CollectionEventEntryForm.field.visitNumber.validation.msg=Visit must have a numb
 CollectionEventEntryForm.specimens.title=Source specimens
 CollectionEventEntryForm.specimens.add.title=Add specimens
 CollectionEventEntryForm.specimenstypes.error.msg=Error retrieving source vessels
-CollectionEventViewForm.title=Visit {0}
+CollectionEventViewForm.title=CE {0}
 CollectionEventViewForm.main.title=Collection Event for visit {0}
 CollectionEventViewForm.sourcespecimens.title=Source specimens
 CollectionEventViewForm.aliquotedspecimens.title=Aliquoted specimens
