resolves #1053 (no message in scan link if no source specimen in processing event)

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -409,6 +409,9 @@ ScanLink.worksheet.error.msg=No processing event with worksheet number ''{0}'' h
 ScanLink.source.column.title=Source Specimen
 ScanLink.result.column.title=Aliquoted Specimen Types
 ScanLink.scan.monitor.position=Processing position {0}
+ScanLink.sourceSpecimenInProcess.error.title=Source specimens error
+ScanLink.sourceSpecimenInProcess.error.msg=No source specimen of this collection \
+event has been declared in a processing event.
 
 
 AliquotedSpecimenSelectionWidget.selections.validation.msg=A source specimen type \
