improve a cabinet link assign error display

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -400,7 +400,9 @@ ScanLink.visit.label="Visit #{0} - Drawn {1}
 ScanLink.worksheet.label=Worksheet
 ScanLink.aliquotedSpecimenTypes.error.title=No specimen types
 ScanLink.aliquotedSpecimenTypes.error.msg=There are no specimen types that are defined \
-in study {0} and that are authorized inside a pallet.
+in study {0} and that are authorized inside available containers.
+ScanLink.aliquotedSpecimenTypes.error.msg.known.container=There are no specimen types that \
+are defined in study {0} and that are authorized inside container {1}
 ScanLink.worksheet.specimens.error.title=Worksheet number
 ScanLink.worksheet.specimens.error.msg=No specimens of this collection event have been \
 added to a processing event with worksheet number ''{0}''
@@ -446,9 +448,7 @@ Cabinet.tabTitle=Cabinet Link/Assign
 Cabinet.visit.label=Collection event
 Cabinet.visit.validationMsg=A collection event should be selected
 Cabinet.checkStatus.error=Position {0} already in use in container {1}
-Cabinet.specimentype.error.title=No specimen types
-Cabinet.specimentype.error.msg=There are no specimen types that are defined for \
-current patient study ({0}) and that are defined as possible for bin {1}
+
 
 #Decode Plate
 DecodePlate.tabTitle=Decode Plate
