Improve login as a super admin

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -17,7 +17,9 @@ LoginDialog.working.center.error.title=Problem getting user working centers
 LoginDialog.no.working.center.error.msg=No working center has been found for this user. \
 Check with your manager or application administrator for user rights.
 LoginDialog.working.center.admin.title=Super administrator mode
-LoginDialog.no.working.center.admin.msg=No working center has been found or selected for this user. You are super administrator, so you will be log on with no working center. Only no center specific actions will be available. 
+LoginDialog.no.working.center.admin.msg=No working center has been found or selected \
+for this user. You are super administrator, so you will be log on with no working center. \
+Only no center specific actions will be available. 
 LoginDialog.perspective.open.error.msg=Error while opening main perspective
 LoginDialog.working.center.selection.error.title=Working center selection
 LoginDialog.working.center.selection.error.msg=You need to select the center you want to work with.
@@ -27,7 +29,7 @@ LoginDialog.field.superAdmin=Connect in super administrator mode
 # WorkingCenterSelectDialog
 WorkingCenterSelectDialog.available.centers.label=Available centers
 WorkingCenterSelectDialog.title=Working center selection
-WorkingCenterSelectDialog.description=You have more than one working center\: choose the one you will work with.
+WorkingCenterSelectDialog.description=Choose the center you will work with.
 
 
 # Common labels and validation messages
