--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -17,9 +17,7 @@ LoginDialog.working.center.error.title=Problem getting user working centers
 LoginDialog.no.working.center.error.msg=No working center has been found for this user. \
 Check with your manager or application administrator for user rights.
 LoginDialog.working.center.admin.title=Super administrator mode
-LoginDialog.no.working.center.admin.msg=No working center has been found or selected \
-for this user. You are super administrator, so you will be log on with no working center. \
-Only no center specific actions will be available. 
+LoginDialog.no.working.center.admin.msg=No working center has been found or selected for this user. You are super administrator, so you will be log on with no working center. Only no center specific actions will be available. 
 LoginDialog.perspective.open.error.msg=Error while opening main perspective
 LoginDialog.working.center.selection.error.title=Working center selection
 LoginDialog.working.center.selection.error.msg=You need to select the center you want to work with.
@@ -478,3 +476,26 @@ GroupEditDialog.feature.center.list.available=Center specific features available
 GroupEditDialog.feature.center.list.selected=Center specific features enabled
 GroupEditDialog.feature.global.list.available=Global features available
 GroupEditDialog.feature.global.list.selected=Global features enabled
+
+#DispatchDialogs
+DispatchCreateScanDialog.description=Scan aliquots to dispatch. If a pallet with previous \
+position is scan, the specimens scanned\nwill be compared to those that are supposed to be in the pallet.
+DispatchCreateScanDialog.noposision.text=No previous position
+DispatchCreateScanDialog.pallet.search.error.msg=Can''t find pallet with barcode '{0}'
+DispatchCreateScanDialog.pallet.search.error.title=Pallet error
+DispatchCreateScanDialog.proceed.button.label=Add aliquots
+DispatchCreateScanDialog.processCell.task.position=Processing position {0} 
+DispatchCreateScanDialog.title=Scanning aliquots
+DispatchCreateScanDialog.with.position.radio.text=Pallet with previous position
+DispatchCreateScanDialog.without.position.radio.text=Pallet without previous position
+DispatchReceiveScanDialog.cell.duplicate.msg=Found more than one aliquot with inventoryId 
+DispatchReceiveScanDialog.cell.notInDb.msg=Specimen {0} not found in database
+DispatchReceiveScanDialog.cell.notInShipment.msg=Aliquot should not be in shipment
+DispatchReceiveScanDialog.description=Scan one pallet received in the shipment.
+DispatchReceiveScanDialog.flagging.error.title=Error flagging aliquots
+DispatchReceiveScanDialog.notInDispatch.error.msg=Some of the aliquots in this pallet were not supposed  to be in this shipment. They will be added to the  extra-pending list.
+DispatchReceiveScanDialog.notInDispatch.error.title=Not in dispatch aliquots
+DispatchReceiveScanDialog.proceed.button.label=Accept aliquots
+DispatchReceiveScanDialog.processCell.task.position=Processing position 
+DispatchReceiveScanDialog.receiveing.error.title=Error receiving aliquots
+DispatchReceiveScanDialog.title=Scanning received pallets
