--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -176,6 +176,7 @@ ContainerTypeEntryForm.save.error.msg.subcontainer.removed=Problem with removed 
 # Patient Forms
 PatientViewForm.title=Patient {0}
 patient.field.label.study=Study
+PatientViewForm.label.createdAt=Created At
 PatientViewForm.label.totalVisits=Total Visits
 PatientViewForm.label.totalSourceSpecimens=Total source specimens
 PatientViewForm.label.totalAliquotedSpecimens=Total aliquoted specimens
