working on #1074 - scanlink and scanassign processes on server side

--- a/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
+++ b/eclipse_ws/biobank2/src/edu/ualberta/med/biobank/messages.properties
@@ -307,15 +307,6 @@ ScanAssign.dialog.noPalletFoundError.title=No Pallet defined ?
 ScanAssign.dialog.noPalletFoundError.msg=No child container types found with 8 \
 rows and 12 columns
 ScanAssign.dialog.reallySave.title=Really save ?
-ScanAssign.scanStatus.aliquot.missing=Specimen {0} missing
-ScanAssign.scanStatus.aliquot.notlinked=Specimen not linked
-ScanAssign.scanStatus.aliquot.moved=Specimen registered on another position: {0}
-ScanAssign.scanStatus.aliquot.otherSite=Specimen has a position in another site (site {0})
-ScanAssign.scanStatus.aliquot.typeError=This pallet type {0} can''t hold a specimen of type {1}
-ScanAssign.scanStatus.aliquot.positionTakenError=Specimen different from the one \
-registered at this position
-ScanAssign.scanStatus.aliquot.dispatchedError=Cannot assign position to a specimen \
-that in dispatch transit
 ScanAssign.dialog.saveWithMissing.msg=Specimens are missing from this pallet, are \
 you sure you want to save ? \
 These specimens will still be registered at their current position.
@@ -351,18 +342,9 @@ ScanAssign.activitylog.pallet.positionUsedMsg=Pallet with product barcode {0} is
 already in position {1} in site {2}
 ScanAssign.activitylog.pallet.moved=MOVED\: Pallet {0} of type {1} moved from position {2} to position {3} (in site {4})
 ScanAssign.activitylog.pallet.added=ADDED\: Pallet {0} of type {1} to position {2} of site {3}
-ScanAssign.activitylog.aliquot.missing=MISSING in {0}\: specimen {1} from visit {2} (patient {3}) missing
-ScanAssign.activitylog.aliquot.notlinked=ERROR in {0}: specimen {1} not linked to any patient
-ScanAssign.activitylog.aliquot.positionTaken=ERROR in {0}\: Expected inventoryId {1} from patient {2} -- Found inventoryId {3} from patient {4}
-ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}\: Cannot assign position to a specimen that still is in dispatch transit
-ScanAssign.activitylog.aliquot.moved=MOVED in {0}\: specimen {1} registered on another position\: {2}
-ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}\: specimen {1} registered in another site\: {2} in position\: {3}
-ScanAssign.activitylog.aliquot.typeError=ERROR in {0}\: this pallet type {1} can''t hold a specimen of type {2}
 ScanAssign.activitylog.aliquot.assigned=ASSIGNED position {0} (site {1}) to specimen {2} - Type\: {3} - Patient\: {4} - Visit\#\: {5}\n
 ScanAssign.activitylog.save.summary=SCAN-ASSIGN: {0} specimens added to pallet {1} of site {2}
 ScanAssign.okMessage=Assigning specimens location.
-ScanLink.activitylog.aliquot.existsError=ERROR in {0}\: Specimen {1} already in \
-database linked to visit {2} of patient {3} (currently in center site {4})
 ScanLink.activitylog.aliquot.linked=LINKED\: {0} - Type\: {1} - Patient\: {2} - Visit\: {3} - Center\: {4} \n
 ScanLink.activitylog.save.summary=SCAN-LINK\: {0} specimens linked to patient {1} on center {2}
 Cabinet.activitylog.checkingId=Checking inventoryID {0}
@@ -381,7 +363,6 @@ in center {2} - Type\: {3} - Patient\: {4} - Visit\: {5}
 Cabinet.activitylog.containers.init=Parent containers - cabinet: {0}; drawer: {1}; bin: {2}
 
 #Scan Link
-ScanLink.scanStatus.aliquot.alreadyExists=Specimen already in database
 ScanLink.custom.type.label=Choose type for selected specimens:
 ScanLink.customChoice.label=Custom Selection choice
 ScanLink.dialog.patient.errorMsg=Error getting the patient
@@ -500,3 +481,26 @@ DispatchReceiveScanDialog.proceed.button.label=Accept aliquots
 DispatchReceiveScanDialog.processCell.task.position=Processing position 
 DispatchReceiveScanDialog.receiveing.error.title=Error receiving aliquots
 DispatchReceiveScanDialog.title=Scanning received pallets
+
+# move to server
+ScanLink.scanStatus.aliquot.alreadyExists=Specimen already in database
+ScanLink.activitylog.aliquot.existsError=ERROR in {0}\: Specimen {1} already in \
+database linked to visit {2} of patient {3} (currently in center site {4})
+ScanAssign.scanStatus.aliquot.missing=Specimen {0} missing
+ScanAssign.activitylog.aliquot.missing=MISSING in {0}\: specimen {1} from visit {2} \
+(patient {3}) missing
+ScanAssign.scanStatus.aliquot.notlinked=Specimen not linked
+ScanAssign.activitylog.aliquot.notlinked=ERROR in {0}: specimen {1} not linked to any patient
+ScanAssign.scanStatus.aliquot.positionTakenError=Specimen different from the one \
+registered at this position
+ScanAssign.scanStatus.aliquot.moved=Specimen registered on another position: {0}
+ScanAssign.activitylog.aliquot.moved=MOVED in {0}\: specimen {1} registered on another position\: {2}
+ScanAssign.scanStatus.aliquot.otherSite=Specimen has a position in another site (site {0})
+ScanAssign.activitylog.aliquot.otherSite=ERROR in {0}\: specimen {1} registered in another site\: {2} in position\: {3}
+ScanAssign.scanStatus.aliquot.typeError=This pallet type {0} can''t hold a specimen of type {1}
+ScanAssign.activitylog.aliquot.typeError=ERROR in {0}\: this pallet type {1} can''t hold a specimen of type {2}
+ScanAssign.scanStatus.aliquot.dispatchedError=Cannot assign position to a specimen \
+that in dispatch transit
+ScanAssign.activitylog.aliquot.dispatchedError=ERROR in {0}\: Cannot assign position to a \
+specimen that still is in dispatch transit
+
